[package]
name = "nagiosplugin"
version = "0.2.10"
authors = ["Marvin Lee Fimmel <kontakt@ekranos.me>"]
documentation = "https://docs.rs/nagiosplugin/latest"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["nagios", "icinga", "icinga2"]
repository = "https://github.com/Ekranos/nagiosplugin-rs"
description = "A small helper library to make it easy to write nagios/icinga checks."
edition = "2018"

[dependencies]
anyhow = "1.0.39"
