[package]
name = "nagiosplugin"
version = "0.7.1"
authors = ["Marvin Lee Fimmel <kontakt@ekranos.me>"]
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["nagios", "icinga", "icinga2"]
repository = "https://github.com/Ekranos/nagiosplugin-rs"
description = "A small helper library to make it easy to write nagios/icinga checks."

[[example]]
name = "generate_command_config"
required-features = ["clap"]

[features]
default = []
clap = ["dep:clap"]

[dependencies]
clap = { version = "4.5.4", optional = true }
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
