[package]
name = "nagiosplugin"
version = "0.7.1"
authors = ["Marvin Lee Fimmel <kontakt@ekranos.me>"]
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["nagios", "icinga", "icinga2"]
repository = "https://github.com/Ekranos/nagiosplugin-rs"
description = "A small helper library to make it easy to write nagios/icinga checks."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
